# ParserCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.cpp  status.txt  test.h  test.txt
project/: main.cpp  page.cpp  page.hpp  parser.cpp  parser.hpp  parserpool.cpp  parserpool.hpp  request.hpp  requestcurl.cpp  requestcurl.hpp  soup.cpp  soup.hpp
